--- a/Meter Card and Smart Parking Meter/ViewControllers/Xibs/Views/ParkingOwner /ParkingOwner.xib
+++ b/Meter Card and Smart Parking Meter/ViewControllers/Xibs/Views/ParkingOwner /ParkingOwner.xib
@@ -17,7 +17,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ParkingOwner" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
             <connections>
+                <outlet property="addressParkingOwnerLabel" destination="Feb-c4-cNn" id="7P0-RZ-6S5"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="Xy5-mz-6oU"/>
+                <outlet property="nameParkingOwnerLabel" destination="Dxi-Ob-mf2" id="hfl-rZ-5mw"/>
+                <outlet property="parkingOwnerImage" destination="ECX-9p-GgU" id="pkx-Jy-Ysb"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -29,9 +32,9 @@
                     <rect key="frame" x="0.0" y="0.0" width="324" height="80"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pxW-d6-nC3">
-                            <rect key="frame" x="0.0" y="20" width="218" height="40"/>
+                            <rect key="frame" x="0.0" y="20" width="208" height="40"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="demo" translatesAutoresizingMaskIntoConstraints="NO" id="ECX-9p-GgU">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_placeholderPerson" translatesAutoresizingMaskIntoConstraints="NO" id="ECX-9p-GgU">
                                     <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="ECX-9p-GgU" secondAttribute="height" multiplier="1:1" id="IJI-AT-AjG"/>
@@ -44,16 +47,16 @@
                                     </userDefinedRuntimeAttributes>
                                 </imageView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="XVk-UZ-3RM">
-                                    <rect key="frame" x="50" y="1" width="168" height="38.5"/>
+                                    <rect key="frame" x="50" y="1" width="158" height="38.5"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Parking Owner " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dxi-Ob-mf2">
-                                            <rect key="frame" x="0.0" y="0.0" width="168" height="18.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dxi-Ob-mf2">
+                                            <rect key="frame" x="0.0" y="0.0" width="158" height="18.5"/>
                                             <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="15"/>
                                             <color key="textColor" name="000000"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address Parking Owner " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Feb-c4-cNn">
-                                            <rect key="frame" x="0.0" y="22.5" width="168" height="16"/>
+                                            <rect key="frame" x="0.0" y="22.5" width="158" height="16"/>
                                             <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="13"/>
                                             <color key="textColor" name="929292"/>
                                             <nil key="highlightedColor"/>
@@ -89,9 +92,9 @@
         </view>
     </objects>
     <resources>
-        <image name="demo" width="1280" height="1280"/>
         <image name="ic_call" width="43" height="43"/>
         <image name="ic_message" width="43" height="43"/>
+        <image name="ic_placeholderPerson" width="95" height="95"/>
         <namedColor name="000000">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
